--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         </div>
     </header>
 
-    <div class="paginacao">
-        <ul class="paginas">
+    <div class="menu-nav">
+        <ul class="menu-nav__pages">
             <li><a>«</a></li>
             <li><a>0</a></li>
-            <li><a class="active">1</a></li>
+            <li><a class="menu-nav__pages--active">1</a></li>
             <li><a>2</a></li>
             <li><a>3</a></li>
             <li><a>4</a></li>
@@ -30,34 +30,31 @@
         </ul>
     </div>
 
-    <form class="caixa-search" action="https://www.kazanto.com.br/">
+    <form class="button-search" action="https://www.kazanto.com.br/">
         <input class="caixa-texto" type="number" name="codprod" placeholder="Pesquisar código winthor">
-        <button class="botao-search">
+        <button class="button-search__img">
             <img src="img/lupa1.png" alt="pesquisar">
         </button>
     </form>
 
-    <a class="link-home" href="index.html#">
-        <div class="botao-home">
-            <div class="botao-icone">
+    <a class="button-home" href="index.html#">
+            <div class="button-home__img">
                 <img src="img/home.png" alt="home">
             </div>
-        </div>
     </a>
 
     <main>
         <div class="container">
             <ul>
                 <!--Card-->
-                <a class="card-link" href="https://www.kazanto.com.br/">
-                    <div class="card">
-                        <div class="card-image"> <img src="img/img1.jpg"> </div>
-                        <div class="card-text">
+                <a class="card" href="https://www.kazanto.com.br/">
+                        <div class="card__img"> <img src="img/img1.jpg"> </div>
+                        <div class="card__text">
                             <span class="date">12/09/2021</span>
                             <h2>29606</h2>
                             <p>20354-RB26 PRODUTO QUE NÃO ESTÁ SEPARADO 29X14X45</p>
                         </div>
-                        <div class="card-stats-incompleto">
+                        <div class="card__status card__status--incompleto">
                             <div class="stat">
                                 <div class="card-status-txt">separado</div>
                             </div>
@@ -68,19 +65,17 @@
                                 <div class="card-status-txt">finalizado</div>
                             </div>
                         </div>
-                    </div>
                 </a>
 
                 <!--Card-->
-                <a class="card-link" href="https://www.kazanto.com.br/">
-                    <div class="card">
-                        <div class="card-image"> <img src="img/img2.jpg"> </div>
-                        <div class="card-text">
+                <a class="card" href="https://www.kazanto.com.br/">
+                        <div class="card__img"> <img src="img/img2.jpg"> </div>
+                        <div class="card__text">
                             <span class="date">12/09/2021</span>
                             <h2>29607</h2>
                             <p>20355-RB27 PRODUTO QUE ESTÁ SEPARADO EDITADO E CADASTRADO</p>
                         </div>
-                        <div class="card-stats">
+                        <div class="card__status">
                             <div class="stat">
                                 <div class="card-status-txt">separado</div>
                             </div>
@@ -91,147 +86,8 @@
                                 <div class="card-status-txt">finalizado</div>
                             </div>
                         </div>
-                    </div>
                 </a>
-
-                <!--Card-->
-                <a class="card-link" href="https://www.kazanto.com.br/">
-                    <div class="card">
-                        <div class="card-image"> <img src="img/img1.jpg"> </div>
-                        <div class="card-text">
-                            <span class="date">12/09/2021</span>
-                            <h2>29606</h2>
-                            <p>20354-RB26 PRODUTO QUE NÃO ESTÁ SEPARADO 29X14X45</p>
-                        </div>
-                        <div class="card-stats-incompleto">
-                            <div class="stat">
-                                <div class="card-status-txt">separado</div>
-                            </div>
-                            <div class="stat border">
-                                <div class="card-status-txt">editado</div>
-                            </div>
-                            <div class="stat">
-                                <div class="card-status-txt">finalizado</div>
-                            </div>
-                        </div>
-                    </div>
-                </a>
-
-                <!--Card-->
-                <a class="card-link" href="https://www.kazanto.com.br/">
-                    <div class="card">
-                        <div class="card-image"> <img src="img/img2.jpg"> </div>
-                        <div class="card-text">
-                            <span class="date">12/09/2021</span>
-                            <h2>29607</h2>
-                            <p>20355-RB27 PRODUTO QUE ESTÁ SEPARADO EDITADO E CADASTRADO</p>
-                        </div>
-                        <div class="card-stats">
-                            <div class="stat">
-                                <div class="card-status-txt">separado</div>
-                            </div>
-                            <div class="stat border">
-                                <div class="card-status-txt">editado</div>
-                            </div>
-                            <div class="stat">
-                                <div class="card-status-txt">finalizado</div>
-                            </div>
-                        </div>
-                    </div>
-                </a>
-
-                <!--Card-->
-                <a class="card-link" href="https://www.kazanto.com.br/">
-                    <div class="card">
-                        <div class="card-image"> <img src="img/img1.jpg"> </div>
-                        <div class="card-text">
-                            <span class="date">12/09/2021</span>
-                            <h2>29606</h2>
-                            <p>20354-RB26 PRODUTO QUE NÃO ESTÁ SEPARADO 29X14X45</p>
-                        </div>
-                        <div class="card-stats-incompleto">
-                            <div class="stat">
-                                <div class="card-status-txt">separado</div>
-                            </div>
-                            <div class="stat border">
-                                <div class="card-status-txt">editado</div>
-                            </div>
-                            <div class="stat">
-                                <div class="card-status-txt">finalizado</div>
-                            </div>
-                        </div>
-                    </div>
-                </a>
-
-                <!--Card-->
-                <a class="card-link" href="https://www.kazanto.com.br/">
-                    <div class="card">
-                        <div class="card-image"> <img src="img/img2.jpg"> </div>
-                        <div class="card-text">
-                            <span class="date">12/09/2021</span>
-                            <h2>29607</h2>
-                            <p>20355-RB27 PRODUTO QUE ESTÁ SEPARADO EDITADO E CADASTRADO</p>
-                        </div>
-                        <div class="card-stats">
-                            <div class="stat">
-                                <div class="card-status-txt">separado</div>
-                            </div>
-                            <div class="stat border">
-                                <div class="card-status-txt">editado</div>
-                            </div>
-                            <div class="stat">
-                                <div class="card-status-txt">finalizado</div>
-                            </div>
-                        </div>
-                    </div>
-                </a>
-
-                <!--Card-->
-                <a class="card-link" href="https://www.kazanto.com.br/">
-                    <div class="card">
-                        <div class="card-image"> <img src="img/img1.jpg"> </div>
-                        <div class="card-text">
-                            <span class="date">12/09/2021</span>
-                            <h2>29606</h2>
-                            <p>20354-RB26 PRODUTO QUE NÃO ESTÁ SEPARADO 29X14X45</p>
-                        </div>
-                        <div class="card-stats-incompleto">
-                            <div class="stat">
-                                <div class="card-status-txt">separado</div>
-                            </div>
-                            <div class="stat border">
-                                <div class="card-status-txt">editado</div>
-                            </div>
-                            <div class="stat">
-                                <div class="card-status-txt">finalizado</div>
-                            </div>
-                        </div>
-                    </div>
-                </a>
-
-                <!--Card-->
-                <a class="card-link" href="https://www.kazanto.com.br/">
-                    <div class="card">
-                        <div class="card-image"> <img src="img/img2.jpg"> </div>
-                        <div class="card-text">
-                            <span class="date">12/09/2021</span>
-                            <h2>29607</h2>
-                            <p>20355-RB27 PRODUTO QUE ESTÁ SEPARADO EDITADO E CADASTRADO</p>
-                        </div>
-                        <div class="card-stats">
-                            <div class="stat">
-                                <div class="card-status-txt">separado</div>
-                            </div>
-                            <div class="stat border">
-                                <div class="card-status-txt">editado</div>
-                            </div>
-                            <div class="stat">
-                                <div class="card-status-txt">finalizado</div>
-                            </div>
-                        </div>
-                    </div>
-                </a>
-
+                
             </ul>
         </div>
     </main>
